<resources>
    <string name="app_name">Christmas</string>

    <!-- Bottom Nav -->
    <string name="label_home">Home</string>
    <string name="label_about_us">About Us</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_account">Account</string>

    <!-- Home -->
    <string name="label_daily_quotation">Daily Quotation</string>
    <string name="text_daily_quotation">Lorem ipsum is simply dummy text of the printing and typesetting the printing and typesetting</string>
    <string name="label_about_pastor">About Our Pastor</string>
    <string name="text_about_pastor">Lorem ipsum is simply dummy text of the printing and typesetting</string>
    <string name="label_our_events">Our Events</string>
    <string name="label_photo_gallery">Photo Gallery</string>
    <string name="view_more">View More</string>

    <!-- Signup -->
    <string name="label_register">Register</string>
    <string name="signup_instruction">Lorem Ipsum has been the industry\'s standard</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_email">Email</string>
    <string name="submit">Submit</string>

    <!-- About Us -->
    <string name="text_about_us">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. \n\n It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\' , making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose.</string>

    <!-- Account -->
    <string name="user_name">Jessy</string>
    <string name="user_email">jessy@gmail.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_support">Help and Support</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>