<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.AccountFragment">

    <ImageView
        android:id="@+id/image_account_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/christmas_red_bg"
        android:scaleType="fitXY"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_display_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginStart="@dimen/margin_medium"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CircularCorners"
        android:src="@drawable/profile_pic1"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_display_picture"
        app:layout_constraintTop_toTopOf="@id/image_display_picture"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"

        android:text="@string/user_name"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/text_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_display_picture"
        app:layout_constraintTop_toBottomOf="@id/text_user_name"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_medium"

        android:text="@string/user_email"
        android:textSize="@dimen/text_size_body"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_account_background"
        android:layout_marginTop="@dimen/margin_medium">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/label_home"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_home_24"
            app:drawableTint="@color/dark_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_extra_small"/>

        <TextView
            android:id="@+id/text_about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/label_about_us"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_info_24"
            app:drawableTint="@color/dark_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_extra_small"/>

        <TextView
            android:id="@+id/text_contact_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/contact_us"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_call_24"
            app:drawableTint="@color/dark_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_extra_small"/>

        <TextView
            android:id="@+id/text_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/label_gallery"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_gallery_24"
            app:drawableTint="@color/dark_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_extra_small"/>

        <TextView
            android:id="@+id/text_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/help_support"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_support_agent_24"
            app:drawableTint="@color/dark_gray"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            android:layout_marginTop="@dimen/margin_extra_small"/>

        <TextView
            android:id="@+id/text_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:paddingTop="@dimen/padding_small"
            android:paddingBottom="@dimen/padding_small"

            android:text="@string/logout"
            android:textSize="@dimen/text_size_subheading_1"
            android:drawablePadding="@dimen/padding_medium"
            app:drawableStartCompat="@drawable/baseline_logout_24"
            app:drawableTint="@color/dark_gray"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>