<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment"
    android:id="@+id/scroll_view_home"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_home"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"

            android:src="@drawable/woman_praying"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/text_label_daily_quotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_home"
            android:layout_marginTop="@dimen/margin_small"

            android:text="@string/label_daily_quotation"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_subheading_1"
            android:letterSpacing="0.03"/>

        <TextView
            android:id="@+id/text_daily_quotation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_label_daily_quotation"
            android:layout_marginStart="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_extra_large"
            android:layout_marginTop="@dimen/margin_small"

            android:text="@string/text_daily_quotation"
            android:textSize="@dimen/text_size_body"
            android:letterSpacing="0.05"/>

        <ImageView
            android:id="@+id/image_about_pastor"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/text_daily_quotation"
            android:layout_marginTop="@dimen/margin_large"
            android:src="@drawable/bg_about_pastor"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/text_label_about_pastor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_about_pastor"
            android:layout_marginTop="@dimen/margin_medium"

            android:text="@string/label_about_pastor"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_subheading_1"
            android:letterSpacing="0.03"/>

        <TextView
            android:id="@+id/text_about_pastor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_label_about_pastor"
            android:layout_marginStart="@dimen/margin_huge"
            android:layout_marginEnd="@dimen/margin_huge"
            android:layout_marginTop="@dimen/margin_medium"

            android:text="@string/text_about_pastor"
            android:textSize="@dimen/text_size_body"
            android:letterSpacing="0.05"/>

        <TextView
            android:id="@+id/text_label_our_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_about_pastor"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"

            android:text="@string/label_our_events"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_subheading_1"
            android:letterSpacing="0.03"/>

        <ImageView
            android:id="@+id/image_our_events"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/text_label_our_events"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"

            android:src="@drawable/christmas_event"
            android:scaleType="fitXY"/>

        <TextView
            android:id="@+id/text_label_photo_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_our_events"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"

            android:text="@string/label_photo_gallery"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_subheading_1"
            android:letterSpacing="0.03"/>

        <Button
            android:id="@+id/button_view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/view_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_label_photo_gallery"
            app:layout_constraintBottom_toBottomOf="@id/text_label_photo_gallery"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photo_gallery"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_label_photo_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>